test/fail_compilation/diag9827a.d
// REQUIRED_ARGS: fail_compilation/diag9827a.d
/*
TEST_OUTPUT:
---
Error: Duplicate file on command-line: 'fail_compilation/diag9827a.d'
---
*/
void main() { }
